--- a/src/views/cuenta_personal.html
+++ b/src/views/cuenta_personal.html
@@ -58,63 +58,48 @@
       <section class="tabla">
         <section class="tabla__titulos"></section>
         <section class="tabla__botones">
-          <section class="tabla__botones--filtro">
-            <p>Filtrar por:</p>
-            <select name="" id="filtrarAnual">
-              <option value="1" selected>2024</option>
-              <option value="2">2023</option>
-              <option value="3">2022</option>
-              <option value="4">2021</option>
-            </select>
-          </section>
           <a href="./registrar_infraestructura.html">Registrar Infraestructura</a>
         </section>
         <section class="tabla__grid">
           <table>
             <thead>
               <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Municipio</th>
-                <th>Editar</th>
-                <th>Tarifa</th>
+                <th class="tabla__grid--ID">ID</th>
+                <th class="tabla__grid--nombre">Nombre</th>
+                <th class="tabla__grid--municipio">Municipio</th>
+                <th class="tabla__grid--editar">Editar</th>
               </tr>
             </thead>
             <tbody id="2023">
               <tr>
-                <td>1</td>
-                <td>La Electrolinera Durango</td>
-                <td>Alvaro Obregon</td>
-                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
-                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+                <td class="tabla__grid--ID">1</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar"><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
               </tr>
               <tr>
-                <td>2</td>
-                <td>La Electrolinera Durango</td>
-                <td>Alvaro Obregon</td>
-                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
-                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+                <td class="tabla__grid--ID">2</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar"><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
               </tr>
               <tr>
-                <td>3</td>
-                <td>La Electrolinera Durango</td>
-                <td>Alvaro Obregon</td>
-                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
-                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+                <td class="tabla__grid--ID">3</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar"><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
               </tr>
               <tr>
-                <td>4</td>
-                <td>La Electrolinera Durango</td>
-                <td>Alvaro Obregon</td>
-                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
-                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+                <td class="tabla__grid--ID">4</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar"><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
               </tr>
               <tr>
-                <td>5</td>
-                <td>La Electrolinera Durango</td>
-                <td>Alvaro Obregon</td>
-                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
-                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+                <td class="tabla__grid--ID">5</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar"><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
               </tr>
             </tbody>
           </table>
