--- a/src/views/cuenta_suministrador.html
+++ b/src/views/cuenta_suministrador.html
@@ -67,72 +67,54 @@
               <option value="4">2021</option>
             </select>
           </section>
-          <a href="">Registrar Solicitud</a>
+          <a href="./solicitud_suministrador.html">Registrar Solicitud</a>
         </section>
         <section class="tabla__grid">
           <table>
             <thead>
               <tr>
-                <th>Periodo</th>
-                <th>RPU</th>
-                <th>Latitud</th>
-                <th>Longitud</th>
+                <th class="tabla__grid--inicio">Mes - Inicio</th>
+                <th class="tabla__grid--fin">Mes - Fin</th>
+                <th class="tabla__grid--rpu">RPU</th>
+                <th class="tabla__grid--latitud">Latitud</th>
+                <th class="tabla__grid--longitud">Longitud</th>
               </tr>
             </thead>
             <tbody id="2023">
               <tr>
-                <td>May/23 - Nov/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
+                <td class="tabla__grid--inicio">May/23</td>
+                <td class="tabla__grid--fin">Nov/23</td>
+                <td class="tabla__grid--rpu">12345678</td>
+                <td class="tabla__grid--latitud">20.783112681665266</td>
+                <td class="tabla__grid--longitud">-101.46017253379192</td>
               </tr>
               <tr>
-                <td>May/23 - Nov/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
+                <td class="tabla__grid--inicio">May/23</td>
+                <td class="tabla__grid--fin">Nov/23</td>
+                <td class="tabla__grid--rpu">12345678</td>
+                <td class="tabla__grid--latitud">20.783112681665266</td>
+                <td class="tabla__grid--longitud">-101.46017253379192</td>
               </tr>
               <tr>
-                <td>May/23 - Nov/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
+                <td class="tabla__grid--inicio">May/23</td>
+                <td class="tabla__grid--fin">Nov/23</td>
+                <td class="tabla__grid--rpu">12345678</td>
+                <td class="tabla__grid--latitud">20.783112681665266</td>
+                <td class="tabla__grid--longitud">-101.46017253379192</td>
               </tr>
               <tr>
-                <td>Ene/23 - Jul/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
+                <td class="tabla__grid--inicio">May/23</td>
+                <td class="tabla__grid--fin">Nov/23</td>
+                <td class="tabla__grid--rpu">12345678</td>
+                <td class="tabla__grid--latitud">20.783112681665266</td>
+                <td class="tabla__grid--longitud">-101.46017253379192</td>
               </tr>
               <tr>
-                <td>Ene/23 - Jul/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td>Ene/23 - Jul/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td>Jul/23 - Dic/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td>Jul/23 - Dic/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
-              </tr>
-              <tr>
-                <td>May/23 - Nov/23</td>
-                <td>12345678</td>
-                <td>20.783112681665266</td>
-                <td>-101.46017253379192</td>
+                <td class="tabla__grid--inicio">May/23</td>
+                <td class="tabla__grid--fin">Nov/23</td>
+                <td class="tabla__grid--rpu">12345678</td>
+                <td class="tabla__grid--latitud">20.783112681665266</td>
+                <td class="tabla__grid--longitud">-101.46017253379192</td>
               </tr>
             </tbody>
           </table>
