--- a/src/css/consulta_desktop.css
+++ b/src/css/consulta_desktop.css
@@ -1,89 +1,5 @@
-:root {
-  --color-guinda: #9f2241;
-  --color-verde-fuerte: #10312b;
-  --color-verde-claro: #235b4e;
-  --color-blanco: white;
-  --color-blanco-opaco: #ffffffe5;
-  --color-azul-cielo: #007bff;
-  --color-azul-cielo-claro: #3491f5;
-  --color-beige: #fdebae;
-  --color-dorado: #bc945a;
-  --color-titulos: #404041;
-
-  --border-radius-botones: 0.5rem;
-  --font-montserrat: "Montserrat", sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  overflow-x: hidden;
-  font-size: 62.5%;
-  /* background:  url('../Imagenes/background-consulta.png');
-    background-repeat: no-repeat;
-    background-size: cover; */
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  background-color: var(--color-verde-fuerte);
-
-  nav {
-    display: flex;
-    width: 90vw;
-    justify-content: space-between;
-    margin: auto;
-
-    section {
-      display: flex;
-      align-items: center;
-    }
-
-    .nav--logos {
-      .Mex {
-        width: 20rem;
-      }
-
-      .CRE {
-        width: 5.4rem;
-        height: 5rem;
-        margin-left: 2rem;
-      }
-    }
-
-    .nav--tab {
-      justify-self: center;
-
-      a {
-        padding-left: 1rem;
-        padding-right: 1rem;
-        align-self: center;
-        font-family: var(--font-montserrat);
-        font-size: 1.6rem;
-        font-weight: 500;
-        text-decoration: none;
-        color: white;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-
-  i {
-    display: block;
-    width: 100vw;
-    height: 3rem;
-    background-color: var(--color-verde-claro);
-  }
-}
+@import url(./root.css);
+@import url(./header.css);
 
 main {
   width: 100vw;
@@ -133,7 +49,7 @@ main {
   }
 
   .mapa__informacion {
-    width: 80%;
+    width: 60vw;
     margin: auto;
     margin-top: 2rem;
 
@@ -168,7 +84,7 @@ main {
 
   .mapa__layout {
     display: flex;
-    width: 80%;
+    width: 60vw;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
@@ -176,7 +92,7 @@ main {
 
     .mapa__layout--grafico {
       z-index: 0;
-      width: 70%;
+      width: 60%;
 
       #map {
         height: 50rem;
@@ -185,7 +101,7 @@ main {
 
     .mapa__layout--informacion {
       display: none;
-      width: 25%;
+      width: 40%;
       height: 50rem;
       border: 0.3rem solid var(--color-guinda);
       border-radius: 2rem;
@@ -405,22 +321,6 @@ main {
           }
         }
       }
-    }
-  }
-}
-
-@media (max-width: 1000px) {
-  .mapa__layout {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100vw;
-
-    .mapa__layout--grafico {
-      width: 100vw;
-    }
-
-    .mapa__layout--informacion {
-      width: 100vw;
     }
   }
 }
