--- a/src/css/root.css
+++ b/src/css/root.css
@@ -14,6 +14,7 @@
   --color-gris-texto: #555555c9;
   --color-gris-opaco: #b4b4b48a;
   --color-gris-bordes: #cccccc;
+  --color-gris-background: #f9f9f9;
   --color-dorado-degradado: linear-gradient(
     0deg,
     rgba(255, 255, 255, 1) 0%,
