--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/consulta_desktop.css" />
+    <link rel="stylesheet" href="../css/consulta_desktop.css" media="screen and (min-width: 769px)"/>
+    <link rel="stylesheet" href="../css/consulta_mobile.css" media="screen and (max-width: 768px)"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
