--- a/src/css/header_mobile.css
+++ b/src/css/header_mobile.css
@@ -8,7 +8,9 @@ header {
     display: flex;
     width: 90vw;
     justify-content: space-between;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin: auto; */
 
     section {
       display: flex;
@@ -17,25 +19,27 @@ header {
 
     .nav--logos {
       .Mex {
-        width: 20rem;
+        width: 12rem;
+        height: 4rem;
       }
 
       .CRE {
-        width: 5.4rem;
-        height: 5rem;
-        margin-left: 2rem;
+        width: 4rem;
+        height: 2rem;
+        margin-left: 0.5rem;
       }
     }
 
     .nav--tab {
-      justify-self: center;
+      display: flex;
+      justify-content: space-between;
+      text-align: center;
+      margin-left: 1rem;
 
       a {
-        padding-left: 1rem;
-        padding-right: 1rem;
-        align-self: center;
+        align-content: center;
         font-family: var(--font-montserrat);
-        font-size: 1.6rem;
+        font-size: 1rem;
         font-weight: 500;
         text-decoration: none;
         color: white;
