--- a/src/css/root.css
+++ b/src/css/root.css
@@ -35,6 +35,7 @@
 }
 
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   font-size: 62.5%;
+  background: var(--color-dorado-degradado);
 }
