Update: diseño responsive en propietario

--- a/src/views/cuenta_personal.html
+++ b/src/views/cuenta_personal.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/cuenta_personal_desktop.css" media="screen and (min-width: 769px)"/>
+    <link rel="stylesheet" href="../css/cuenta_personal_mobile.css" media="screen and (max-width: 768px)"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/cuenta_personal_desktop.css" />
     <title>Cuenta Suministrador | ElectroCRE</title>
   </head>
   <body>
@@ -50,7 +51,7 @@
               <p class="columnaUno__label">Teléfono</p>
               <p>5627722324</p>
               <p class="columnaUno__label abajo">Correo Electronico</p>
-              <p>joseamm@comunidad.unam.mx</p>
+              <p>joseamm@gmail.com</p>
             </section>
           </section>
         </section>
