--- a/src/views/registrar_infraestructura.html
+++ b/src/views/registrar_infraestructura.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/registrar_infrestuctura_desktop.css" media="screen and (min-width: 769px)"/>
+    <link rel="stylesheet" href="../css/registrar_infraestructura_mobile.css" media="screen and (max-width: 768px)"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/registrar_infrestuctura_desktop.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
